# pubsub-broker

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROTOCOL.md  README.md  README_fa.md  docker-compose.yml  go.mod  quickstart.sh
.github/workflows/: ci.yml
cmd/brokectl/: main.go  main_test.go
cmd/broker/: main.go
cmd/gateway/: main.go
cmd/gen-config/: main.go
configs/: broker.json
deploy/k8s/: configmap.yaml  namespace.yaml  poddisruptionbudget.yaml  service.yaml  statefulset.yaml
internal/audit/: audit.go  audit_test.go
internal/auth/: auth.go  auth_bench_test.go  auth_test.go  rate_limiter.go  rbac.go  rbac_test.go
internal/broker/: accessors.go  broker.go  broker_integration_test.go  broker_recovery_test.go  broker_restart_test.go  broker_test.go  broker_wal_test.go  checkpoint.go  cluster.go  cluster_raft_test.go  consumer_group_detail_test.go  dashboard_auth_log_test.go  dashboard_test.go  dlq_endpoint_test.go  explorer.go  explorer_auth_test.go  explorer_endpoint.go  explorer_endpoint_test.go  explorer_metrics_test.go  explorer_test.go  handlers_auth.go  handlers_consumer.go  handlers_dispatch.go  handlers_publish.go  handlers_seek.go  handlers_topic.go  hotreload_wiring_test.go  http.go  http_audit_dashboard.go  http_cluster.go  http_config.go  http_config_patch.go  http_config_patch_test.go  http_dlq.go  (+16 more)
python-client/: README.md  pyproject.toml
python-client/pubsub/: __init__.py  client.py  consumer.py  producer.py  protocol.py  types.py
python-client/tests/: test_client.py  test_protocol.py
(+120 files in other folders)
