[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pubsub-broker-client"
version = "0.1.0"
description = "Pure-Python client for pubsub-broker (stdlib only, no external dependencies)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
# No dependencies — stdlib only (socket, threading, struct, json, base64).
dependencies = []

[project.urls]
Homepage = "https://github.com/Hoot-Code/pubsub-broker"
Repository = "https://github.com/Hoot-Code/pubsub-broker"

[tool.setuptools.packages.find]
where = ["."]
include = ["pubsub*"]
